tests/baselines/reference/ExportAssignment8.errors.txt
ExportAssignment8.ts(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
ExportAssignment8.ts(1,10): error TS2304: Cannot find name 'B'.


==== ExportAssignment8.ts (2 errors) ====
    export = B;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
             ~
!!! error TS2304: Cannot find name 'B'.
    
    export class C {
    }